# 2DFM_Player

./: .axproj.json  .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  run.bat
Shaders/: Sprite.frag  Sprite.vert
Source/: AppDelegate.cpp
Source/2dfm/: 2dfmCommon.hpp  2dfmFile.hpp  2dfmFileReader.cpp  2dfmFileReader.hpp  2dfmScriptItem.hpp  CommonResource.cpp  CommonResource.hpp  KgtGame.cpp  KgtGame.hpp  KgtPalette.hpp  KgtPicture.cpp  KgtPicture.hpp  KgtPlayer.cpp  KgtPlayer.hpp  KgtStage.cpp  KgtStage.hpp  SoundClip.cpp  SoundClip.hpp
Source/base/: KgtPalette.hpp  KgtPicture.cpp  KgtPicture.hpp  MyString.hpp  SoundClip.cpp  SoundClip.hpp
Source/debug/: StageTestScene.cpp  StageTestScene.hpp  TestAudioEngineScene.cpp  TestAudioEngineScene.hpp  TestPictureScene.cpp  TestPictureScene.hpp
Source/engine/: AudioSource.cpp  AudioSource.hpp  AudioSystem.cpp  AudioSystem.hpp  InMemFileStream.cpp  InMemFileStream.hpp  Input.cpp  Input.hpp  InputSystem.cpp  InputSystem.hpp  KgtComponent.cpp  KgtComponent.hpp  KgtFileUtil.cpp  KgtFileUtil.hpp  KgtNode.cpp  KgtNode.hpp  MathUtils.hpp  MyString.hpp  Singleton.hpp  SoundClip.cpp  SoundClip.hpp  WavDecoder.cpp  WavDecoder.hpp
Source/game/: DemoScene.cpp  DemoScene.hpp  DemoScriptInterceptor.cpp  DemoScriptInterceptor.hpp  FirstScene.cpp  FirstScene.hpp  GameConfig.cpp  GameConfig.hpp  GameDemo.cpp  GameDemo.hpp  GameManager.cpp  GameManager.hpp  GameStage.cpp  GameStage.hpp  GlobalData.cpp  GlobalData.hpp  KgtScriptInterceptor.cpp  KgtScriptInterceptor.hpp  MainScene.cpp  MainScene.hpp  MoveComponent.cpp  MoveComponent.hpp  ParallaxComponent.cpp  ParallaxComponent.hpp  PlayerNode.cpp  PlayerNode.hpp  PlayerScriptInterceptor.cpp  PlayerScriptInterceptor.hpp  ScriptInterceptorComponent.cpp  ScriptInterceptorComponent.hpp  SeamlessScrollComponent.cpp  SeamlessScrollComponent.hpp  StageCameraNode.cpp  StageCameraNode.hpp  StageNode.cpp  StageNode.hpp  StageScriptInterceptor.cpp  StageScriptInterceptor.hpp  StageTestScene.cpp  StageTestScene.hpp  (+2 more)
Source/game/scenes/: CharSelectionScene.cpp  CharSelectionScene.hpp  MainScene.cpp  MainScene.hpp  OpenningScene.cpp  OpenningScene.hpp  TitleScene.cpp  TitleScene.hpp
Source/math/: base.hpp
Source/shaders/: 2dfmPositionTextureColor.frag
cmake_utils/modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.win32/: main.cpp
proj.winrt/: App.xaml  Package.appxmanifest
src/: CMakeLists.txt  main.cpp
src/2dfm/: 2dfmCommon.cpp  2dfmCommon.hpp  2dfmFile.cpp  2dfmFile.hpp  2dfmFileReader.cpp  2dfmFileReader.hpp  2dfmScriptItem.hpp  CMakeLists.txt  CommonResource.cpp  CommonResource.hpp  KgtDemo.hpp  KgtGame.cpp  KgtGame.hpp
src/base/: AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Game.cpp  Game.hpp  InputSystem.cpp  InputSystem.hpp  MoveComponent.cpp  MoveComponent.hpp  Node.cpp  Node.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SoundClip.cpp  SoundClip.hpp  SpriteComponent.cpp  SpriteComponent.hpp  SpriteFrame.cpp  SpriteFrame.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/game/: CMakeLists.txt  DemoScriptInterceptor.cpp  DemoScriptInterceptor.hpp  GameConfig.hpp  TestComponent.cpp  TestComponent.hpp
src/math/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp
test/: CMakeLists.txt  test01.cpp
